# ChronoGuard

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  package-lock.json  pyproject.toml  test_output.txt
.devcontainer/: README.md  devcontainer.json  setup-demo.sh
.github/: pull_request_template.md
.github/workflows/: README.md  code-quality.yml  deploy-demo.yml  docker-build.yml  docker-images.yml  integration-tests.yml  test-suite.yml
backend/: Dockerfile  coverage.json
backend/alembic/: .gitkeep
backend/alembic/versions/: .gitkeep
backend/scripts/: clear_database.py  seed_database.py  seed_sample_data.py
backend/src/: main.py
backend/src/application/: pagination.py
backend/src/chronoguard/: __init__.py
backend/src/core/: celery_app.py  config.py  container.py  database.py  features.py  logging.py  security.py
backend/templates/rego/: base_policy.rego.j2
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  conftest.py  docker-compose.test.yml  test_audit_repository_integration.py  test_proxy_flow.py
backend/tests/unit/: test_agent_domain.py  test_agent_dto.py  test_agent_exceptions.py  test_api_routes.py  test_audit_domain.py  test_audit_dto.py  test_audit_exceptions.py  test_audit_export.py  test_audit_hasher.py  test_audit_integrations.py  test_audit_routes.py  test_auth_middleware.py  test_auth_routes.py  test_cache_repository.py  test_celery_app.py  test_certificate.py  test_chronoguard_init.py  test_command_audit_side_effects.py  test_commands.py  test_common_exceptions.py  test_config.py  test_config_generator.py  test_core_logging.py  test_core_systems.py  test_cors_middleware.py  test_database.py  test_dependencies.py  test_discovery_service.py  test_domain_integration.py  test_entity_coverage.py  test_grpc_server.py  test_infrastructure_coverage.py  test_internal_routes.py  test_logging_coverage.py  test_observability_integration.py  test_opa_bundle_builder.py  test_opa_client.py  test_opa_decision_logger.py  test_pagination.py  test_phase5_coverage.py  (+19 more)
configs/envoy/: envoy.yaml
configs/opa/: config.yaml
configs/opa/policies/: chronoguard.rego
deployments/docker/: .env.example  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml
deployments/kubernetes/: README.md  kustomization.yaml  namespace.yaml
deployments/kubernetes/configmaps/: envoy-config.yaml  nginx-config.yaml  opa-config.yaml  opa-policies.yaml
deployments/kubernetes/deployments/: api.yaml  dashboard.yaml  envoy.yaml  opa.yaml  postgres.yaml  redis.yaml
deployments/kubernetes/ingress/: nginx-ingress.yaml  traefik-ingress.yaml
deployments/kubernetes/secrets/: app-secrets.yaml.template  database-secrets.yaml.template  tls-secrets.yaml.template
deployments/kubernetes/services/: services.yaml
deployments/kubernetes/storage/: postgres-pvc.yaml  redis-pvc.yaml
docker/audit-sink/: Dockerfile
docker/audit-sink/audit_sink/: main.py
docker/dashboard/: Dockerfile
docker/metrics-exporter/: Dockerfile
docker/metrics-exporter/metrics_exporter/: main.py
docker/playwright-runner/: Dockerfile
docker/policy-engine/: Dockerfile
docker/policy-engine/policies/: temporal_access.rego
docker/proxy/: Dockerfile  envoy-proxy.yaml
docs/: SECURITY_ARCHITECTURE.md  THREAT_MODEL.md
docs/architecture/: architecture-diagrams.md  architecture-index.md  architecture-overview.md  architecture.md
docs/guides/: environment-variables.md  kubernetes-deployment.md
examples/: generic_python_agent.py  langchain_agent.py  opa-rate-limit-example.md
examples/basic-policies/: README.md  business-hours.rego  domain-allowlist.rego  rate-limiting.rego
examples/fintech-policies/: README.md  compliance-domains.rego  risk-management.rego  trading-hours.rego
examples/healthcare-policies/: README.md  audit-requirements.rego  operational-hours.rego  phi-protection.rego
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  test-results.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  main.test.tsx  main.tsx
frontend/src/components/: AddAgentModal.tsx  AddPolicyModal.tsx  Layout.test.tsx  Layout.tsx  SeedDataPrompt.tsx
frontend/src/hooks/: useApi.comprehensive.test.tsx  useApi.mutations.test.tsx  useApi.test.tsx  useApi.ts
frontend/src/pages/: AgentsPage.test.tsx  AgentsPage.tsx  AuditPage.comprehensive.test.tsx  AuditPage.display.test.tsx  AuditPage.final.test.tsx  AuditPage.handlers.test.tsx  AuditPage.simple.test.tsx  AuditPage.test.tsx  AuditPage.tsx  Dashboard.test.tsx  Dashboard.tsx  LoginPage.tsx  PoliciesPage.test.tsx  PoliciesPage.tsx
frontend/src/services/: api.comprehensive.test.ts  api.direct.test.ts  api.methods.test.ts  api.simple.test.ts  api.test.ts  api.ts  mockApi.ts
frontend/src/test/: mockData.ts  setup.ts
frontend/src/types/: api.test.ts  api.ts
playground/: README.md  demo-allowed.py  demo-blocked.py  demo-interactive.py
playground/demo-certs/: README.md  ca-cert.pem  ca-key.pem  demo-agent-cert.pem  demo-agent-key.pem  server-cert.pem  server-key.pem
playground/policies/: demo-policy.rego
scripts/: README.md  docker_management.sh  generate-agent-cert.sh  generate-k8s-secrets.sh  generate_secrets.sh  k8s-health-check.sh  seed_opa_policies.sh  verify_foundation.py
sdk/javascript/: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  SDK_SUMMARY.md  jest.config.js  package.json  tsconfig.json
sdk/javascript/examples/: basic-usage.ts
sdk/javascript/src/: agents.ts  analytics.ts  audit.ts  (+5 more)
sdk/python/: .gitignore  README.md  SDK_SUMMARY.md  pyproject.toml  setup.py
sdk/python/chronoguard_sdk/: __init__.py  agents.py  analytics.py  audit.py  client.py  exceptions.py  models.py  policies.py
sdk/python/tests/: __init__.py  conftest.py  test_agents.py  test_analytics.py  test_audit.py  test_client.py  test_exceptions.py  test_models.py  test_policies.py
(+82 files in other folders)
