[project]
name = "chronoguard"
version = "0.1.0"
description = "🔒 Zero-trust proxy that monitors and controls what your browser automation can access"
authors = [
    {name = "j-raghavan"}
]
license = {text = "Apache 2"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[all]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Database (TimescaleDB works via standard PostgreSQL protocol)
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",  # For TimescaleDB-specific operations
    # Cache & Queue
    "redis[hiredis]>=5.0.1",
    "celery[redis]>=5.3.6",
    # Observability
    "loguru>=0.7.2",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "opentelemetry-propagator-b3>=1.22.0",  # B3 propagation for distributed tracing
    # Envoy & OPA
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "xds-protos>=0.0.11",  # Envoy xDS protobuf definitions
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
]
lint = [
    "ruff>=0.1.14",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]
security = [
    "bandit[toml]>=1.7.6",
    "safety>=3.0.1",
]
performance = [
    "locust>=2.20.0",
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
